--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <label for="name" class="fw-bold me-2 fs-6">الرقم السري</label>
                 <input type="password" name="" id="password" class="rounded-pill border-info border p-2 text-info fw-bold fs-6" placeholder="اكتب هنا ..." required>
                 
-                <label for="name" class="fw-bold me-2  fs-6">تاريخ ميلادك</label>
+                <label for="name" class="fw-bold me-2 date fs-6">تاريخ ميلادك</label>
                 <input dir="ltr" type="date" name="" id="data" class="text-center rounded-pill border-info border p-2 text-info fw-bold fs-6" >
 
                 <p class="fs-5 fw-bold mt-2">الجنس</p>
