--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 
                 </div>
                 <div class="d-flex mt-3 mb-3 justify-content-between">
-                    <label for="s" class="fw-bold fs-6">انت متأكد أن البيانات التي أدخلتها صحيحة ؟</label>
+                    <label for="s" class="fw-bold fs-6 sss">انت متأكد أن البيانات التي أدخلتها صحيحة ؟</label>
                     <input type="checkbox" required id="s">
                 </div>
                 <input type="submit" class="btn btn-info text-white " value="انشاء حساب">
